--- a/README
+++ b/README
@@ -1,4 +1,3 @@
-
     http://chomsky.shampoo.ca/goldenembed
 
     This is the Java parser for the GoldenEmbed project. It contains two
@@ -18,13 +17,19 @@ represents HOUR another for MINUTE and another byte for SECOND.
 For GoldenEmbedGPS (v2 or GEGPS) the message conists of the raw ANT+ data
 followed by LONGITUDE, LATITUDE, DATE and TIME.
 
-An example message would be as such:
+An example for GE V1 would be:
+
+ANT+ A4 03 40 01 51 00 B7
+TIME: 0B 01 0C 17 33 34 (Elapsed timer from the start)
+
+
+An example message for GE v2 would be as such:
 
 ANT+:      A4 03 40 01 51 00 B7 
 LATITUDE:  34 35 33 32 2E 31 30 38 33 00 00 00 00 00 00 
 LONGITUDE: 30 37 33 33 34 2E 35 32 31 34 00 00 00 00 00 
-DATE:      32 36 31 32 31 30 
-TIME:      32 33 31 31 31 34 2E 32 36 30 
-END:       0A
+DATE:      0B 01 0C 17 33 34
+TIME:      0B 01 0C 17 33 34 (UTC)
+
 
 
